# Mental-Health-Support-AI-Agent

./: README.md  frontend.py  main.py  pyproject.toml  requirementes.txt
backend/: ai_agent.py  config.py  main.py  tools.py
